--- a/sorts/tsconfig.json
+++ b/sorts/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es6",
-        "module": "None",
+        "target": "es5",
+        "module": "esNext",
         "moduleResolution": "node",
         "sourceMap": true,
         "lib": [
