--- a/sorts/tsconfig.json
+++ b/sorts/tsconfig.json
@@ -4,6 +4,9 @@
         "module": "esNext",
         "moduleResolution": "node",
         "sourceMap": true,
+        "alwaysStrict": true,
+        "strictFunctionTypes": false,
+        "strictNullChecks": true,
         "lib": [
             "dom",
             "dom.iterable",
