--- a/sorts/package.json
+++ b/sorts/package.json
@@ -5,6 +5,7 @@
     "author": "Bjorn Tipling",
     "license": "Apache-2.0",
     "scripts": {
+        "lint": "yarn run tslint --fix --project .",
         "prod": "./node_modules/.bin/cross-env NODE_ENV=production ./node_modules/.bin/webpack",
         "dev": "./node_modules/.bin/cross-env NODE_ENV=development ./node_modules/.bin/webpack-dev-server --content-base ./build --hot --inline --colors --port 8800 --open --history-api-fallback"
     },
@@ -22,6 +23,8 @@
         "ramda": "^0.25.0",
         "source-map-loader": "^0.2.3",
         "ts-loader": "^3.1.1",
+        "tslint": "^5.8.0",
+        "tslint-eslint-rules": "^4.1.1",
         "typescript": "^2.6.1",
         "uglifyjs-webpack-plugin": "^1.0.1",
         "webpack": "^3.8.1",
