--- a/sorts/tsconfig.json
+++ b/sorts/tsconfig.json
@@ -7,6 +7,10 @@
         "alwaysStrict": true,
         "strictFunctionTypes": false,
         "strictNullChecks": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
         "lib": [
             "dom",
             "dom.iterable",
