--- a/sorts/package.json
+++ b/sorts/package.json
@@ -18,11 +18,17 @@
         "@types/history": "^4.6.2",
         "@types/node": "^8.0.53",
         "cross-env": "^5.1.1",
+        "css-loader": "^0.28.7",
         "cycle-onionify": "^4.0.0",
         "cyclic-router": "^5.1.3",
+        "eslint": "^4.11.0",
+        "extract-text-webpack-plugin": "^3.0.2",
         "html-webpack-plugin": "^2.30.1",
+        "node-sass": "^4.7.1",
         "ramda": "^0.25.0",
+        "sass-loader": "^6.0.6",
         "source-map-loader": "^0.2.3",
+        "style-loader": "^0.19.0",
         "ts-loader": "^3.1.1",
         "tslint": "^5.8.0",
         "tslint-eslint-rules": "^4.1.1",
