--- a/sorts/package.json
+++ b/sorts/package.json
@@ -14,6 +14,7 @@
         "@cycle/history": "^6.9.0",
         "@cycle/isolate": "^3.2.0",
         "@cycle/run": "^4.0.0",
+        "@cycle/time": "^0.10.1",
         "@types/core-js": "^0.9.43",
         "@types/history": "^4.6.2",
         "@types/node": "^8.0.53",
