--- a/sorts/package.json
+++ b/sorts/package.json
@@ -31,6 +31,7 @@
         "source-map-loader": "^0.2.3",
         "style-loader": "^0.19.0",
         "ts-loader": "^3.1.1",
+        "ts-node": "^3.3.0",
         "tslint": "^5.8.0",
         "tslint-eslint-rules": "^4.1.1",
         "typescript": "^2.6.1",
