--- a/sorts/package.json
+++ b/sorts/package.json
@@ -32,6 +32,7 @@
         "style-loader": "^0.19.0",
         "ts-loader": "^3.1.1",
         "ts-node": "^3.3.0",
+        "tsconfig-paths-webpack-plugin": "^1.0.0",
         "tslint": "^5.8.0",
         "tslint-eslint-rules": "^4.1.1",
         "typescript": "^2.6.1",
