--- a/sorts/tsconfig.json
+++ b/sorts/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "baseUrl": "./ts",
         "target": "es5",
         "module": "esNext",
         "moduleResolution": "node",
